--- a/public/css/gsdk-bootstrap-wizard.css
+++ b/public/css/gsdk-bootstrap-wizard.css
@@ -396,7 +396,7 @@ h1 .subtitle {
 
 /*             Inputs               */
 .form-control {
-  background-color: #FFFFFF;
+  background-color: #0000;
   border: 1px solid #E3E3E3;
   border-radius: 4px;
   box-shadow: none;
@@ -405,7 +405,7 @@ h1 .subtitle {
   padding: 6px 16px;
 }
 .form-control:focus {
-  background-color: #FFFFFF;
+  background-color: #0000;
   border: 1px solid #9A9A9A;
   box-shadow: none;
   outline: 0 none;
