front end profile

--- a/public/css/gsdk-bootstrap-wizard.css
+++ b/public/css/gsdk-bootstrap-wizard.css
@@ -725,7 +725,7 @@ h1 .subtitle {
 }
 
 .text-primary, .text-primary:hover {
-  color: #3472F7;
+  color: #f96332;
 }
 
 .text-info, .text-info:hover {
